k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartshieldverify-deployment
  labels:
    app: smartshieldverify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartshieldverify
  template:
    metadata:
      labels:
        app: smartshieldverify
    spec:
      imagePullSecrets:
        - name: chainsmart-pull-image-secret
      containers:
      - name: smartshieldverify
        image: chainsmart/smartshieldverify:v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "5Mi"
            cpu: "10m"
          limits:
            memory: "500Mi"
            cpu: "500m"
