k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartshieldverify
spec:
  selector:
    app: smartshieldverify
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
