k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: smartshield-verify-chainsmart-id-vsvc
spec:
  hosts:
  - "verify.smartshield.dev.chainsmart.id"
  gateways:
  - smartshield-verify-chainsmart-id-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: smartshieldverify
        port:
          number: 80
